--- a/package.json
+++ b/package.json
@@ -1,18 +1,35 @@
 {
-  "name": "teste-backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "start": "ts-node-dev --files -r tsconfig-paths/register --inspect --ignore-watch node_modules src/index.ts"
+  "name": "bun",
+  "type": "commonjs",
+  "version": "0.0.1",
+  "devDependencies": {
+    "@swc/cli": "^0.1.63",
+    "@swc/core": "^1.3.102",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^22.1.0",
+    "cpx": "^1.5.0",
+    "vite": "^2.8.6"
+  },
+  "peerDependencies": {
+    "typescript": "^5.4.5"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "handlebars": "^4.7.8", 
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "node": "^20.14.0",
+    "zod": "^3.23.6"
   },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "ts-node-dev": "^1.1.8",
-    "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.6.2"
+  "scripts": {
+    "dev": "bun run --watch src/index.ts",
+    "start": "bun run src/index.ts"
   }
 }
