--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "handlebars": "^4.7.8", 
+    "handlebars": "^4.7.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.11.3",
     "node": "^20.14.0",
+    "sequelize": "^6.37.3",
     "zod": "^3.23.6"
   },
   "scripts": {
